SCRUM-122 Feat: PostingService getPosts 수정